# experiment

./: .gitignore
c++/: main.cpp  practice_01.cpp  practice_02.cpp  practice_03.cpp  practice_04.cpp
c++/grammar/: l_r_value.cpp  make_func.cpp  refer_pointer.cpp  stdout.cpp  value.cpp
c++/utils/: trace.hpp
deeplearning/text/: README.md  batch.py  logs.py  main.py  pyproject.toml
deeplearning/text/model/: tiny.py
monitoring_toy/: Readme.md
monitoring_toy/include/: mem.h
monitoring_toy/pr_1/: CMakeLists.txt
monitoring_toy/pr_1/src/: main.cpp  mem_macos.cpp
monitoring_toy/pr_2/: CMakeLists.txt  Job.md
monitoring_toy/pr_2/include/memmon/: collector.h  macos_collector.h  time.h
monitoring_toy/pr_2/src/: main.cpp
monitoring_toy/pr_2/src/os/: macos_collector.cpp
monitoring_toy/pr_2/tools/: memstress.cpp
